feat: DarkScan - content scanning, SSRF protection, XSS fix, dark UI